--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title></title>
   </head>
   <body>
+    <h2>FizzBuzz</h2>
+    <ul id="lista">
+
+    </ul>
     <script type="text/javascript" src="js/script.js">
 
     </script>
